page details fleshed out

--- a/Archery-Page/Archery.html
+++ b/Archery-Page/Archery.html
@@ -9,8 +9,8 @@
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
             <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>           
-         <!--    <script src="https://kit.fontawesome.com/5e17eb84ca.js" crossorigin="anonymous"></script>
-           <script src="https://kit.fontawesome.com/2f366bb402.js" crossorigin="anonymous"></script>       -->  
+            <script src="https://kit.fontawesome.com/5e17eb84ca.js" crossorigin="anonymous"></script>
+           <script src="https://kit.fontawesome.com/2f366bb402.js" crossorigin="anonymous"></script>       
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
             integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonumous" />
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
@@ -59,27 +59,20 @@
             <section class="sneak-about" id="services">
                 <h2 class="section__title section__title--services">About this Archery Project</h2>
                 <div class="services">
-                    <div class="service">
-                        <p>My name is Zackery Thomas, I have grown up in the golden age of games and
-                            technology advancement. Natrually this has led me into a passion for game production and design. 
-                            I started at Boise State University in 2019 and entered in to gaming, interactive media, and mobile
-                            development program (GIMM). Here I have learned many new skills, XR development in Swift, Unity, and Unreal.
-                            HTML, CSS, Javascript, C#, C++, Blueprint are some of the many languages I have learned for mobile and web development. 
-                            My name is Zackery Thomas, I have grown up in the golden age of games and
-                            technology advancement. Natrually this has led me into a passion for game production and design. 
-                            I started at Boise State University in 2019 and entered in to gaming, interactive media, and mobile
-                            development program (GIMM). Here I have learned many new skills, XR development in Swift, Unity, and Unreal.
-                            HTML, CSS, Javascript, C#, C++, Blueprint are some of the many languages I have learned for mobile and web development. 
+                    <div class="services">
+                        <p>This Archery game is currently an in progress, continually involving project. 
+                            Grab your bow, and shoot the apples out of the air in this Arcade-Shooter VR
+                            game! Draw back your bow string and fire your arrows, making sure to pick up
+                            ammo to fill your quiver as you run out. You have two minutes... go! 
                         </p>
-                    </div>
-                    <div class="service">
-                        <div class="embed-responsive embed-responsive-16by9"><
+                        <div class="embed-responsive embed-responsive-16by9"></div>
                         <p>
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/F34BkUXOMts" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </p>
-                        </div>
                     </div>
-                </div>               
+                </div> 
+                </div>
+              
             </section>
 
              <!--Development-->
@@ -90,16 +83,15 @@
             </header>
 
             <div class="about-me__body">
-                <p>My name is Zackery Thomas, I have grown up in the golden age of games and
-                    technology advancement. Natrually this has led me into a passion for game production and design. 
-                    I started at Boise State University in 2019 and entered in to gaming, interactive media, and mobile
-                    development program (GIMM). Here I have learned many new skills, XR development in Swift, Unity, and Unreal.
-                    HTML, CSS, Javascript, C#, C++, Blueprint are some of the many languages I have learned for mobile and web development. 
+                <p>This is a personal project I started in September 2021. The original vision was to create an arcade 
+                    shooter, rapidly firing your arrows within a 2 min timer to gain the highest point possible. Always
+                    having to reload your quiver to gain the max amount of shots possible. This game is developed in Unity. 
                 </p>
-               <p>My goal is to find a project I am passionate about and a team to join in order to build something 
-                   to leave an impact in people's lives. I believe the best things I can bring to the table is my work ethic, drive 
-                   for accomplishment, coming in every day being the best I can be, and development of strong relations with others to 
-                   overcome the many challenges teams can face, whether in programming or life. 
+               <p>This game is all original assets created by me, using Nomade, Procreate, Blender, and Maya. Implementing my own C# 
+                   programming, and rigging it using the New Input System, for Oculus and the Valve Index. This project is working 
+                   on the tutorial level shooting apples in an orchard, with intention to create a rail shooter expirence, putting
+                   a player in a boat to go down a river to shoot fish. This game will have updates as development progresses. So please
+                   stay tuned.... 
                </p>
             </div>
 
