--- a/IceCatch-Page/IceCatch.html
+++ b/IceCatch-Page/IceCatch.html
@@ -60,16 +60,10 @@
                 <h2 class="section__title section__title--services">What is IceCatch</h2>
                 <div class="services">
                     <div class="service">
-                        <p>My name is Zackery Thomas, I have grown up in the golden age of games and
-                            technology advancement. Natrually this has led me into a passion for game production and design. 
-                            I started at Boise State University in 2019 and entered in to gaming, interactive media, and mobile
-                            development program (GIMM). Here I have learned many new skills, XR development in Swift, Unity, and Unreal.
-                            HTML, CSS, Javascript, C#, C++, Blueprint are some of the many languages I have learned for mobile and web development. 
-                            My name is Zackery Thomas, I have grown up in the golden age of games and
-                            technology advancement. Natrually this has led me into a passion for game production and design. 
-                            I started at Boise State University in 2019 and entered in to gaming, interactive media, and mobile
-                            development program (GIMM). Here I have learned many new skills, XR development in Swift, Unity, and Unreal.
-                            HTML, CSS, Javascript, C#, C++, Blueprint are some of the many languages I have learned for mobile and web development. 
+                        <p>Ice Catch is an augmented reality game involved around survival. In this minigame
+                            you use your phone to control your fishing pole, dabbing your bobber into the ice hole. 
+                            As the time continues your hunger increases, until it reaches 0. Your goal is to 
+                            catch a fish at the end of the pole, and eat it, keeping your hunger down and the game in play.  
                         </p>
                     </div>
                 </div>               
@@ -83,16 +77,16 @@
             </header>
 
             <div class="about-me__body">
-                <p>My name is Zackery Thomas, I have grown up in the golden age of games and
-                    technology advancement. Natrually this has led me into a passion for game production and design. 
-                    I started at Boise State University in 2019 and entered in to gaming, interactive media, and mobile
-                    development program (GIMM). Here I have learned many new skills, XR development in Swift, Unity, and Unreal.
-                    HTML, CSS, Javascript, C#, C++, Blueprint are some of the many languages I have learned for mobile and web development. 
+                <p> This game was given to a group of 4 to develop in the course of a semester or 14 weeks. Using Unity and Augmented Reality 
+                    for Android, we were to develop a core gameloop for a minigame. Over the course of the 14 weeks the team practice SCRUM 
+                    taking a role in development lead, lead programmer, artist, and game tester. This game used the phones accelermoter to 
+                    control the fishing pole, as well as real time to decrease the hunger bar. 
                 </p>
-               <p>My goal is to find a project I am passionate about and a team to join in order to build something 
-                   to leave an impact in people's lives. I believe the best things I can bring to the table is my work ethic, drive 
-                   for accomplishment, coming in every day being the best I can be, and development of strong relations with others to 
-                   overcome the many challenges teams can face, whether in programming or life. 
+               <p> Over the course of the 14 weeks I participated in all the roles. I created the model, texture, and animation of the fish
+                   seen in the game. I also implemented the accelermoter into the pole, and casting the line renderer into the water to catch the 
+                   fish. Lastly, my contribution that I am most proud of, was creating the lake with artificial intellgence of the fish spawning 
+                   and swiming in the lake. Each instance randomized the amount of fish and their spawn rates when playing the game. The fish
+                   swim to invisible waypoints, and once the collide with another fish or with the waypoint, randomly select another point to swim too.  
                </p>
             </div>
 
