--- a/MakerLabIFU-Page/MakerLabIFU.html
+++ b/MakerLabIFU-Page/MakerLabIFU.html
@@ -60,16 +60,12 @@
                 <h2 class="section__title section__title--services">MakerLab Instructions for Use</h2>
                 <div class="services">
                     <div class="service">
-                        <p>My name is Zackery Thomas, I have grown up in the golden age of games and
-                            technology advancement. Natrually this has led me into a passion for game production and design. 
-                            I started at Boise State University in 2019 and entered in to gaming, interactive media, and mobile
-                            development program (GIMM). Here I have learned many new skills, XR development in Swift, Unity, and Unreal.
-                            HTML, CSS, Javascript, C#, C++, Blueprint are some of the many languages I have learned for mobile and web development. 
-                            My name is Zackery Thomas, I have grown up in the golden age of games and
-                            technology advancement. Natrually this has led me into a passion for game production and design. 
-                            I started at Boise State University in 2019 and entered in to gaming, interactive media, and mobile
-                            development program (GIMM). Here I have learned many new skills, XR development in Swift, Unity, and Unreal.
-                            HTML, CSS, Javascript, C#, C++, Blueprint are some of the many languages I have learned for mobile and web development. 
+                        <p>The Maker Lab is a service offered by Boise State University that allows its students
+                            to utilize resources such as 3D printers, laser cutters, and soldering machines. This app 
+                            demonstrates a new tool for teaching and giving instructions to the user using augmented 
+                            reality. This prototype uses the labs vinyl cutter as starting place for these instructions. 
+                            At the vinyl cutter station the user can pull out their phone and scan the enviroment to 
+                            provide written, or video instruction in real space. Guiding the user along as they learn a new tool. 
                         </p>
                     </div>
                 </div>               
@@ -83,16 +79,15 @@
             </header>
 
             <div class="about-me__body">
-                <p>My name is Zackery Thomas, I have grown up in the golden age of games and
-                    technology advancement. Natrually this has led me into a passion for game production and design. 
-                    I started at Boise State University in 2019 and entered in to gaming, interactive media, and mobile
-                    development program (GIMM). Here I have learned many new skills, XR development in Swift, Unity, and Unreal.
-                    HTML, CSS, Javascript, C#, C++, Blueprint are some of the many languages I have learned for mobile and web development. 
+                <p> The maker lab app was assigned to a group of 5 as a semester project using swift, reality kit, and xcode. 
+                    This class involved looking around Boise State University's campus to find a need for user accesibility. We 
+                    did research with the university's PEERs program to discuss ideas on how we can provide help on campus. 
                 </p>
-               <p>My goal is to find a project I am passionate about and a team to join in order to build something 
-                   to leave an impact in people's lives. I believe the best things I can bring to the table is my work ethic, drive 
-                   for accomplishment, coming in every day being the best I can be, and development of strong relations with others to 
-                   overcome the many challenges teams can face, whether in programming or life. 
+               <p>Using the Apple reality kit, we plugged in an anchor at the vinyl cutter station, we imported still slides 
+                   that can be read through with pictures taking the user step by step through how to use the cutter. The app includes 
+                   frequently asked questions, and a video tutorial as well. The plan for this app is that it can grow to be used at 
+                   each station in the Maker Lab. I was the primary programmer on this app. Swift involved learning the use of 
+                   the states, each booling toggling each view used in the app. 
                </p>
             </div>
 
