--- a/Sneakurai-Page/Sneakurai.html
+++ b/Sneakurai-Page/Sneakurai.html
@@ -60,6 +60,16 @@
                 <h2 class="section__title section__title--services">What is Sneakurai</h2>
                 <div class="services">
                     <div class="service">
+                        <p>Sneakurai is a 2D top-down stealth game. You play as a Samurai,
+                            long dead, long forgotten. You return from your slumber centuries
+                            after you have been laid to rest to exact revenge against the decendents 
+                            of those that betrayed you. 
+                        </p>
+                        <p> Sneak into the tower to grab your katana. Stab the guard in the back
+                            or confront him directly, avoiding their barage of bullets or even
+                            reflecting them back to end them. Increase the spirit of the katana,
+                            find the secret slot to open the door and ascend the tower.
+                        </p>
                     </div>
                 </div>               
             </section>
@@ -72,16 +82,15 @@
             </header>
 
             <div class="about-me__body">
-                <p>My name is Zackery Thomas, I have grown up in the golden age of games and
-                    technology advancement. Natrually this has led me into a passion for game production and design. 
-                    I started at Boise State University in 2019 and entered in to gaming, interactive media, and mobile
-                    development program (GIMM). Here I have learned many new skills, XR development in Swift, Unity, and Unreal.
-                    HTML, CSS, Javascript, C#, C++, Blueprint are some of the many languages I have learned for mobile and web development. 
+                <p>Sneakurai was developt by a team of 5 using Adobe Animate and Action Script. We were tasked for 6 weeks
+                    to complete one level of a game built from the ground up in our first course in the Gaming, Interactive Media,
+                    and Mobile Development.  
                 </p>
-               <p>My goal is to find a project I am passionate about and a team to join in order to build something 
-                   to leave an impact in people's lives. I believe the best things I can bring to the table is my work ethic, drive 
-                   for accomplishment, coming in every day being the best I can be, and development of strong relations with others to 
-                   overcome the many challenges teams can face, whether in programming or life. 
+               <p>My specific roll in this project was level design and general game programming. As secondary programmer I took charge
+                   of visual effects, collision, and enemy state machines. I would be given the art of the enviroment and lay them 
+                   out for the player to move around. I coded the timing for the lighting flashes, and the models to move, such as the fish 
+                   and opening of the elevator doors. The AI for the enemy contains three states, search state, chase state, and wander state. 
+                   when the player walks across the line of sight of the enemy it would trigger the cange of state. 
                </p>
             </div>
 
