--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
             <div class="about-me__body">
                 <p>My name is Zackery Thomas, I have grown up in the golden age of games and
-                    technology advancement. Natrually this has led me into a passion for game production and design. 
+                    technology advancement. Naturally this has led me into a passion for game production and design. 
                     I started at Boise State University in 2019 and entered in to gaming, interactive media, and mobile
                     development program (GIMM). Here I have learned many new skills, XR development in Swift, Unity, and Unreal.
                     HTML, CSS, Javascript, C#, C++, Blueprint are some of the many languages I have learned for mobile and web development. 
