--- a/MakerLabIFU-Page/MakerLabIFU.html
+++ b/MakerLabIFU-Page/MakerLabIFU.html
@@ -64,7 +64,7 @@
                             to utilize resources such as 3D printers, laser cutters, and soldering machines. This app 
                             demonstrates a new tool for teaching and giving instructions to the user using augmented 
                             reality. This prototype uses the labs vinyl cutter as starting place for these instructions. 
-                            At the vinyl cutter station the user can pull out their phone and scan the enviroment to 
+                            At the vinyl cutter station the user can pull out their phone and scan the environment to 
                             provide written, or video instruction in real space. Guiding the user along as they learn a new tool. 
                         </p>
                     </div>
@@ -80,10 +80,10 @@
 
             <div class="about-me__body">
                 <p> The maker lab app was assigned to a group of 5 as a semester project using swift, reality kit, and xcode. 
-                    This class involved looking around Boise State University's campus to find a need for user accesibility. We 
+                    This class involved looking around Boise State University's campus to find a need for user accessibility. We 
                     did research with the university's PEERs program to discuss ideas on how we can provide help on campus. 
                 </p>
-               <p>Using the Apple reality kit, we plugged in an anchor at the vinyl cutter station, we imported still slides 
+               <p>Using the Apple reality kit, we plugged in an anchor at the vinyl cutter station. We imported still slides 
                    that can be read through with pictures taking the user step by step through how to use the cutter. The app includes 
                    frequently asked questions, and a video tutorial as well. The plan for this app is that it can grow to be used at 
                    each station in the Maker Lab. I was the primary programmer on this app. Swift involved learning the use of 
