--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div class="service">
                     <h3>XR: VR, AR, and MR Development</h3>
                     <p>I have put a large focus into the growing area of Augmented Reality and Virtual Reality
-                        as growning industry of entertainment. I have part taken in many projects using Mixed Reality 
+                        industry of entertainment. I have part taken in many projects using Mixed Reality 
                         as you can view below on my works section.
                     </p>
                 </div> <!--service-->
