--- a/Archery-Page/Archery.html
+++ b/Archery-Page/Archery.html
@@ -64,15 +64,12 @@
                             Grab your bow, and shoot the apples out of the air in this Arcade-Shooter VR
                             game! Draw back your bow string and fire your arrows, making sure to pick up
                             ammo to fill your quiver as you run out. You have two minutes... go! 
-                        </p>
-                        <div class="embed-responsive embed-responsive-16by9"></div>
-                        <p>
+                        </p> 
+                        <div class="embed-responsive embed-responsive-16by9 services">
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/F34BkUXOMts" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        </p>
-                    </div>
+                        </div>  
                 </div> 
-                </div>
-              
+            </div>
             </section>
 
              <!--Development-->
