--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             +pro:300,900&display=swap" rel="stylesheet">
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
-            integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonumous" /> 
+            integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonumous" />
             <script src="https://kit.fontawesome.com/2f366bb402.js" crossorigin="anonymous"></script>
             <script src="https://kit.fontawesome.com/5e17eb84ca.js" crossorigin="anonymous"></script> 
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
@@ -145,7 +145,7 @@
             <!--Footer-->
             <footer class="footer">
                 <a href="Mailto:info@ZackeryThomas.org" class="footer-link">Info@ZackeryThomas.org</a>
-                <ul class="social-list">
+              <!--  <ul class="social-list">
                     <li class="social-list__item">
                         <a class="social-list__link" href="https://www.youtube.com/">
                             <i class="fa-brands fa-youtube-square"></i>
@@ -153,10 +153,10 @@
                     </li>
                     <li class="social-list__item">
                         <a class="social-list__link" href="https://github.com">
-                            <i class="fa-brands fa-github-square"></i>
+                            <i class="fa fa-github fa_custom fa-2x"></i>
                         </a>
                     </li>
-                </ul>
+                </ul>-->
             </footer>
     </body>
 </html>
