--- a/index.html
+++ b/index.html
@@ -138,6 +138,11 @@
                     <a href="MakerLabIFU-Page/MakerLabIFU.html" class="portfolio__item">
                         <img src="Zackery-Page/MakerLabApp.jpg" alt="" class="portfolio__img">
                     </a>
+
+                    <!--Portfolio Item 05-->
+                    <a href="Vector-21/Vector-21.html" class="portfolio__item">
+                        <img src="VectorPyramid.jpg" alt="" class="portfolio__img">
+                    </a>
                 </div>
             </section>
 
