--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
                     <!--Portfolio Item 05-->
                     <a href="Vector-21/Vector-21.html" class="portfolio__item">
-                        <img src="VectorPyramid.jpg" alt="" class="portfolio__img">
+                        <img src="Zackery-Page/VectorPyramid.jpg" alt="" class="portfolio__img">
                     </a>
                 </div>
             </section>
